tests/specs/node/dynamic_import_and_require_dual/resolution_mode_import.mts
import type { kind } from "package" with {
  "resolution-mode": "import",
};

const test: typeof kind = "other";
console.log(test);
